--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -11,6 +11,10 @@
   },
   "dependencies": {
     "@types/express": "^5.0.2",
-    "express": "^5.1.0"
+    "@types/jsonwebtoken": "^9.0.10",
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "jwt": "^0.2.0",
+    "zod": "^4.1.11"
   }
 }
