--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack --port 3000",
+    "dev": "next dev --turbopack --port 3000 & cd ../api && bun run index.ts",
     "build": "next build",
     "start": "next start",
     "lint": "next lint --max-warnings 0",
