--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -2,9 +2,9 @@
   "name": "worker",
   "module": "index.ts",
   "type": "module",
-  "private": true,
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "redis-parivaar": "*"
   },
   "peerDependencies": {
     "typescript": "^5"
